--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ body {
 }
 
 .bg-primary {
-  background-color: rgb(175, 14, 175) !important;
+  background-color: #343a40 !important;
 }
 
   .message {
